...
        let image = AppConstants.Images.menuImage
//        image = image.withRenderingMode(.alwaysOriginal)
        let menu = UIBarButtonItem(image: image,
                                   style:.plain,
                                   target: self,
                                   action: #selector(menuTapped))
        menu.accessibilityIdentifier = "MenuButtonIdentifier"
        menu.tintColor = .label
        self.navigationItem.setRightBarButton(menu, animated: true)
    }

    @objc private func menuTapped() {
        self.presenter.goToMenu(delegate: self)
...

    private func setupAddButton() {
        let add = UIBarButtonItem(barButtonSystemItem: .add,
                                  target: self,
                                  action: #selector(addTapped))
        add.tintColor = .label
        add.accessibilityIdentifier = "AddButtonIdentifier"
        self.navigationItem.setLeftBarButton(add, animated: true)
    }

    @objc private func addTapped() {
        self.presenter.addDeviceTapped()
    }
...
